Work on Chapter 5

--- a/TAMUTemplateSP18.tex
+++ b/TAMUTemplateSP18.tex
@@ -141,6 +141,7 @@
 \include{data/section2}
 \include{data/section3}
 \include{data/section4}
+\include{data/section5}
 %The next line is the format for inserting new sections.
 %Replace the name "newsection"  with the name of your
 %new section file.
