--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1227,3 +1227,30 @@ title = {Hardware and Firmware for the CMS Global Calorimeter Trigger}
       year          = "2019",
       howpublished  = "\url{http://brazos.tamu.edu/acknowledge.html}",
 }
+@article{jes_jer,
+	doi = {10.1088/1748-0221/12/02/p02014},
+	url = {https://doi.org/10.1088%2F1748-0221%2F12%2F02%2Fp02014},
+	year = 2017,
+	month = {feb},
+	publisher = {{IOP} Publishing},
+	volume = {12},
+	number = {02},
+	pages = {P02014--P02014},
+	author = {The CMS collaboration},
+	title = {Jet energy scale and resolution in the {CMS} experiment in pp collisions at 8 {TeV}},
+	journal = {Journal of Instrumentation},
+}
+@article{PhysRevD.97.075035,
+	title = {Bottom-quark fusion processes at the LHC for probing ${Z}^{\ensuremath{'}}$ models and $B$-meson decay anomalies},
+	author = {Abdullah, Mohammad and Dalchenko, Mykhailo and Dutta, Bhaskar and Eusebi, Ricardo and Huang, Peisi and Kamon, Teruki and Rathjens, Denis and Thompson, Adrian},
+	journal = {Phys. Rev. D},
+	volume = {97},
+	issue = {7},
+	pages = {075035},
+	numpages = {7},
+	year = {2018},
+	month = {Apr},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevD.97.075035},
+	url = {https://link.aps.org/doi/10.1103/PhysRevD.97.075035}
+}
