Updates to trigger section

--- a/data/nomenclature.tex
+++ b/data/nomenclature.tex
@@ -32,7 +32,8 @@
 		BFF	&	Bottom Fermion Fusion\\	[2ex]
 		CERN & European Center for Nuclear Research\\ [2ex]
 		CMS	&	Compact Muon Solenoid\\	[2ex]		
-		CSV	&	Combined Secondary Vertex\\	[2ex]				
+		CSV	&	Combined Secondary Vertex\\	[2ex]
+		CTF & Combinatorial Track Finder \\ [2ex]				
 		DAQ	&	Data Acquisition \\	[2ex]						
 		EMCAL & Electromagnetic Calorimeter\\ [2ex]
 		EW	&	Electroweak\\	[2ex]
